--- a/KidsAlphabetApp/app/src/main/res/layout/activity_image_and_audio2.xml
+++ b/KidsAlphabetApp/app/src/main/res/layout/activity_image_and_audio2.xml
@@ -16,5 +16,6 @@
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:onClick="roateImage"
         app:srcCompat="@drawable/ic_launcher_background" />
 </androidx.constraintlayout.widget.ConstraintLayout>
